# test_code_code

./: .gitignore
C++/: test.cpp
C++/LevOJ/accepted/P1035 chickens and rabits in the same cage/: chickens and rabits in the same cage.cpp
C++/LevOJ/accepted/P1046 find the middle number/: find the middle number.cpp
C++/LevOJ/accepted/P1071 sum of vectors/: sum of vectors.cpp
C++/LevOJ/accepted/P1073 reverse number/: reverse number.cpp
C++/LevOJ/accepted/P1099 6174number black hole/: 6174number black hole.cpp
C++/LevOJ/accepted/P1101 kakutani conjecture/: kakutani conjecture.cpp
C++/LevOJ/accepted/P1111 turn on lights/: turn on lights.cpp
C++/LevOJ/accepted/P1114 palindromic phalanx/: palindromic phalanx(1).cpp
C++/LevOJ/accepted/P1120 large integer addition/: large integer addition.cpp
C++/LevOJ/accepted/P1136 high-precision multiplication/: high-precision multiplication.cpp
C++/LevOJ/accepted/P1195 wukong eats peaches/: wukong eats peaches(1).cpp
C++/LevOJ/accepted/P1209 twin primes/: twin primes.cpp
C++/LevOJ/accepted/P1293 lay apples/: lay apples.cpp
C++/LevOJ/jump grid/: jump grid(1).cpp
C++/OJ by myself/jump grid/: jump grid(2).cpp  jump grid(3).cpp
C++/program_by_myself/2D Fighting Game/: game.cpp  game_start.cpp
C++/template/: UFSets(Disjoint Sets).cpp  template.cpp  template.md
C++/template/Arrangement and Combination/: A&C.cpp
C++/template/Binary Indexed Tree/: Binary Indexed Tree.cpp
C++/template/Dichotomous answers/: Dichotomous answers.cpp
C++/template/Segment tree/: Segment tree.cpp  Segment tree_max.cpp  Segment tree_sin.cpp  Segment_tree_square_sum.cpp
C++/template/UFSets(Disjoint Sets)/: UFSets(Disjoint Sets)(2).cpp
C++/template/binary lifting/: binary lifting.cpp
C++/template/binary_search/: binary_search.cpp
C++/template/fread/: fread.cpp
C++/template/isprime/: isprime.cpp
C++/template/multiplication inverse/: multiplication inverse.cpp
C++/template/quickpow/: quickpow.cpp
C++/test/: cf_template.cpp  template.cpp  test.cpp  test.md  test2.cpp  test3.cpp  test4.cpp
C++/workspace/software/FTP-Client/: CMakeLists.txt
C++/workspace/software/FTP-Client/include/: ftpClient.h
C++/workspace/software/FTP-Client/src/: ftpClient.cpp  ftpClientExample.cpp
C++/workspace/software/FTP-Server/src/: CMakeLists.txt  ftpServer.cpp  ftpServerExample.cpp  main.cpp  tempFile
C/OJ by myself/0 number at the end of factorial/: 0 number at the end of factorial.c
C/OJ by myself/a add subtract multiply divide b/: a add subtract multiply divide b(1).c  a add subtract multiply divide b(2).c  a add subtract multiply divide b(3).c  a add subtract multiply divide b(4).c
C/OJ by myself/find the largest number/: find the largest number(1).c  find the largest number(2).c  find the largest number.c
C/OJ by myself/greatest common divisor/: greatest common divisor.c
C/OJ by myself/triangle/: triangle.c
C/none_guidings/calculate 1 number in binary/: calculate 1 number in binary.c
C/none_guidings/calculate s=a+aa+na/: calculate s=a+aa+na.c
C/none_guidings/print s=a+aa+na/: print s=a+aa+na.c
C/test/: test.c
Java/: testJava.java
Java/example/metelog/: pom.xml
Java/example/zenia/: pom.xml
JavaScript/: test.js
Python/: test.py  test2.py
Verilog/workspace/cpu/: alu.v  alu_mux.v  control_unit.v  cpu.v  cpu_tb.v  data_path.v  ir.v  pc.v  reg_group.v  register.v  state_transition.v
template/: template.cpp  template.md
template/Arrangement and Combination/: A&C.cpp
template/Binary Indexed Tree/: Binary Indexed Tree.cpp
template/Dichotomous answers/: Dichotomous answers.cpp
template/Disjoint Sets/: Disjoint Sets.cpp
template/Segment tree/: Segment tree_ioi.cpp  Segment tree_max.cpp  Segment tree_sin.cpp  Segment tree_square_sum.cpp  Segment tree_sum.cpp  Segment tree_xor.cpp
template/graph/Chained forward star/: Chained forward star.cpp
template/isprime/: isprime.cpp
template/number theory/BSGS/: exBSGS.cpp
template/number theory/divisibility/: divisibility.cpp
template/number theory/multiplication inverse/: multiplication inverse.cpp
template/queue/monotonic queue/: monotonic queue.cpp
template/quickpow/: quickpow.cpp
template/string/KMP/: KMP.cpp
template/string/Trie/: Lumpy_Trie.cpp  Trie.cpp
template/template/Binary Indexed Tree/: Binary Indexed Tree.cpp
template/template/convert/: encodeConvert.cpp
template/template/isprime/: isprime.cpp
template/template/locale/: listAll.cpp
test/: err.txt  in.txt  out.txt  template.cpp  test.c  test.cpp  test.css  test.html  test.java  test.md  test2.cpp  test2.html  test2.java  test3.cpp
test/testC#/: testC#.sln
test/testC#/testC#/: Program.cs  testC#.csproj
test/testC#/testC#2/: Program.cs  testC#2.csproj
test/testC++/: test.cpp  test2.cpp  test3.cpp
test/testC++/demo-qt/: CMakeLists.txt
test/testC++/demo-qt/include/: demo_qt.h  header.h
test/testC++/demo-qt/src/: demo_qt.cpp  demo_qt.h  demo_qt.ui  main.cpp
test/testC++/demo-qt/ui/main-window/: demo_qt.cpp  demo_qt.ui
test/testC++/test/: Makefile
test/testC++/test2/: Makefile
test/testC++/test3/: CMakeLists.txt  out.txt
test/testC++/test3/config/: config.json
test/testC++/test3/include/: encode_convert.h  header.h  my_utils.h  sms.h
test/testC++/test3/include/bits/: stdc++.h
test/testC++/test3/src/: CMakeLists.txt  date_calculator.cpp  main.cpp  sms.cpp
test/testEmbedded/mcs51-quickstart/: mcs51-quickstart.code-workspace
test/testFrontEnd/testHTML/: test.html  test2.html
test/testGo/test2/: go.mod
test/testHTML/: test.html  test2.html
test/testJava/: Test2.java  test.java  test2.java
test/testJava/Test2/: Test2.java
test/testJava/demo-springboot/: pom.xml
test/testJava/demo-swt/: pom.xml
test/testJava/demo-web/: pom.xml
test/testJava/test/: pom.xml
test/testJavaScript/: test.js
test/testPython/test/: pyproject.toml  test.py
test/testPython/test/src/: arknights.ipynb  main.ipynb  main.py  test.ipynb  test.py
test/testRust/test_rust/: Cargo.toml
test/testRust/test_rust2/: Cargo.toml
test/testRust/test_rust2/src/: lib.rs  main.rs
(+1504 files in other folders)
