[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.29.2",
    "openai>=1.65.4",
    "pyqt5<=5.15.11",
    "loguru>=0.7.3",
    "pyqt-fluent-widgets>=1.7.6",
    "python-dotenv>=1.0.1",
    "psutil>=7.0.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "numpy<2.2.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "keras>=3.9.2",
    "tensorflow>=2.19.0",
    "tensorflow-io-gcs-filesystem<=0.31.0",
    "ipykernel>=6.29.5",
    "xgboost>=3.0.0",
    "graphviz>=0.20.3",
    "openpyxl>=3.1.5",
    "opencv-python>=4.11.0.86",
    "rapidocr>=2.0.7",
    "onnxruntime>=1.21.1",
    "keyboard>=0.13.5",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "cartopy>=0.24.1",
    "ucimlrepo>=0.0.7",
    "kagglehub[pandas-datasets]>=0.3.12",
    "beautifulsoup4>=4.13.4",
    "statsmodels>=0.14.4",
    "xarray>=2025.4.0",
    "django>=5.2.1",
    "flask>=3.1.1",
    "dask>=2025.5.1",
    "streamlit>=1.45.1",
    "plotly>=6.1.2",
    "folium>=0.19.6",
    "metpy>=1.7.0",
    "streamlit-folium>=0.25.0",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.3",
    "xlwt>=1.3.0",
    "xlrd>=2.0.1",
    "geopandas>=1.0.1",
]
