[package]
name = "test_rust2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand="0.8.5"
# ndarray="0.16.1"
# burn="0.14.0"
# bevy="0.14.2"
# tokio = {version = "1.37.0",features = ["full"]}
# bpaf = {version = "0.9.12",features = ["derive","bright-color"]}
# ansi_term = "0.12.1"
# prettytable-rs = "0.10.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3